# pdfjoiner

./: .gitignore  Cargo.toml  LICENSE  README.md  designs.afdesign  icons.afdesign  pdfjoiner.sln
Resources/: addhover.xaml  addnormal.xaml  bannerlogo.xaml  generatedepressed.xaml  generatehover.xaml
csharp/: ToDos.org
csharp/Resources/: adddepressed.xaml  drawing.xaml  generatenormal.xaml
csharp/pdfjoiner.Core/: pdfjoiner.Core.csproj
csharp/pdfjoiner.DesktopClient/: MainWindow.xaml.cs  pdfjoiner.DesktopClient.csproj
csharp/pdfjoiner.console/: Program.cs
pdfjoiner.Core/: Class1.cs  pdfjoiner.Core.csproj
pdfjoiner.Core/Generator/: PdfGenerator.cs
pdfjoiner.Core/Models/: DocumentJoinModel.cs  DocumentListModel.cs  DocumentModel.cs  DocumentPageModel.cs  DocumentSegmentModel.cs
pdfjoiner.DesktopClient/: #MainWindow.xaml.cs#  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  pdfjoiner.DesktopClient.csproj
pdfjoiner.DesktopClient/Document/: DocumentGenerator.cs  DocumentItem.cs
pdfjoiner.DesktopClient/Properties/: Resources.Designer.cs  Resources.resx
pdfjoiner.DesktopClient/Styles/: Buttons.xaml  Colors.xaml  Fonts.xaml  Texts.xaml
pdfjoiner.DesktopClient/ValueConverters/: HeaderToImageConverter.cs
pdfjoiner.DesktopClient/View Model/: BaseViewModel.cs  DelegateCommand.cs  DirectoryItemViewModel.cs  DocumentList.cs  MainViewModel.cs
pdfjoiner.DesktopClient/ViewModelHelpers/: BaseDesignModel.cs  (+2 more)
pdfjoiner.Themes/: Theme.xaml
pdfjoiner.console/: Program.cs  pdfjoiner.Console.csproj
scripts/: bundle_mac.sh
src/: main.rs
(+36 files in other folders)
